cabal-version: 2.2
name:
  grab
version:
  0.1.0.0
synopsis:
  grab nixpkgs info from github
--description:
homepage:
  https://github.com/chessai/grab
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

executable grab
  main-is:
    Main.hs
  build-depends:
      base >=4.7 && < 4.13
    , aeson >= 1.4.0.0 && < 1.5.0.0 
    , aeson-pretty >= 0.8.0 && < 0.9.0 
    , bytestring >= 0.10.0.0 && < 0.11.0.0 
    , optparse-applicative >= 0.14.0.0 && < 0.15.0.0 
    , process >= 1.6.0.0 && < 1.7.0.0
    , text >= 1.2.0.0 && < 1.3.0.0
  hs-source-dirs:
    src
  default-language:    Haskell2010
